--- a/custom_component/rohlikcz/manifest.json
+++ b/custom_component/rohlikcz/manifest.json
@@ -1,12 +1,12 @@
 {
   "domain": "rohlikcz",
-  "name": "Rohlík CZ",
+  "name": "Rohlík.cz",
   "codeowners": ["@dvejsada"],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://github.com/dvejsada/PID_integration/blob/master/readme.md",
+  "documentation": "https://github.com/dvejsada/HA_RohlikCZ",
   "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/dvejsada/PID_integration/issues",
+  "issue_tracker": "https://github.com/dvejsada/HA_RohlikCZ/issues",
   "requirements": [],
   "version": "0.1.0"
 }
